5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1723_2499.log
== TEST (2019-05-09 11:46:45) 
-- CODE:
from math import *
k = int(input("Quantidades de termos: "))
#1 / factorial(i)
i = 0            #Variável Contadora
soma = 0         #Variável Acumuladora
fim = k - 1
while (fim => i):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 7
    while (fim => i):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:46:58) 
-- CODE:
from math import *
k = int(input("Quantidades de termos: "))
#1 / factorial(i)
i = 0            #Variável Contadora
soma = 0         #Variável Acumuladora
fim = k - 1
while (fim >= i):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:47:44) 
-- CODE:
from math import *
k = int(input("Quantidades de termos: "))
#1 / factorial(i)
i = 0            #Variável Contadora
soma = 0         #Variável Acumuladora
fim = k - 1
while (fim >= i):
	soma = soma + 1 / factorial(i)
	i = i + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.174526
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
